@@ -83,7 +83,7 @@ test_that("tuneIrace works with tune.threshold", {
   tr = tuneParams("classif.rpart", multiclass.task, rdesc, par.set = ps, control = ctrl)
 })
 
-test_that("tuneIrace handles adapts the number of digits", {
+test_that("tuneIrace handles the number of digits", {
   lrn = makeLearner("classif.gbm", predict.type = "prob")
   rdesc = makeResampleDesc(method = "Holdout")
   
@@ -96,11 +96,44 @@ test_that("tuneIrace handles adapts the number of digits", {
   
   ctrl = makeTuneControlIrace(maxExperiments = 120L)
   ps = makeParamSet(
-    makeNumericParam("shrinkage", lower = pi * 1e-20, upper = 5.242 * 1e12),
+    makeNumericParam("shrinkage", lower = pi * 1e-20, upper = 5.242e12),
     makeIntegerParam("interaction.depth", lower = 1, upper = 10)
   )
   lrn.tune = makeTuneWrapper(lrn, resampling = rdesc, par.set = ps, 
     control = ctrl, measure = list(mmce), show.info = FALSE)
   res = resample(lrn.tune, task = multiclass.task, rdesc, 
     measures = list(mmce), show.info = FALSE)  
+})
+
+test_that("tuneIrace uses irace digits", {
+  lrn = makeLearner("classif.gbm", predict.type = "prob")
+  rdesc = makeResampleDesc(method = "Holdout")
+  
+  ctrl = makeTuneControlIrace(maxExperiments = 60L, irace.digits = 5L)
+  ps = makeParamSet(makeNumericParam("shrinkage", lower = 1e-5, upper = 1e-4))
+  lrn.tune = makeTuneWrapper(lrn, resampling = rdesc, par.set = ps, 
+    control = ctrl, measure = list(mmce), show.info = FALSE)
+  res = resample(lrn.tune, task = multiclass.task, rdesc, 
+    measures = list(mmce), show.info = FALSE)
+
+  ctrl = makeTuneControlIrace(maxExperiments = 60L, irace.digits = 4L)
+  ps = makeParamSet(makeNumericParam("shrinkage", lower = 1e-5, upper = 1e-4))
+  lrn.tune = makeTuneWrapper(lrn, resampling = rdesc, par.set = ps, 
+    control = ctrl, measure = list(mmce), show.info = FALSE)
+  expect_error(suppressAll(resample(lrn.tune, task = multiclass.task, rdesc, 
+    measures = list(mmce), show.info = FALSE)))
+
+  ctrl = makeTuneControlIrace(maxExperiments = 60L, irace.digits = "a")
+  ps = makeParamSet(makeNumericParam("shrinkage", lower = 1e-5, upper = 1e-4))
+  lrn.tune = makeTuneWrapper(lrn, resampling = rdesc, par.set = ps, 
+    control = ctrl, measure = list(mmce), show.info = FALSE)
+  expect_error(suppressAll(resample(lrn.tune, task = multiclass.task, rdesc, 
+    measures = list(mmce), show.info = FALSE)))
+
+  ctrl = makeTuneControlIrace(maxExperiments = 60L, irace.digits = c(6L, 7L))
+  ps = makeParamSet(makeNumericParam("shrinkage", lower = 1e-5, upper = 1e-4))
+  lrn.tune = makeTuneWrapper(lrn, resampling = rdesc, par.set = ps, 
+    control = ctrl, measure = list(mmce), show.info = FALSE)
+  expect_error(suppressAll(resample(lrn.tune, task = multiclass.task, rdesc, 
+    measures = list(mmce), show.info = FALSE)))
 })
