@@ -12,6 +12,8 @@ mlr_2.4:
 - update on learners: added sparseLDA and removed xgboost
 - reg.km: added param 'iso'
 - classif.mda: added param 'start.method' and changed its default to 'lvq'
+- tuneIrace: allows to set the precision / digits within irace (using the argument 'irace.digits'
+  in makeTuneControlIrace); default is maximum precision
 
 mlr_2.3:
 - resample now returns an object of class ResampleResult (downward compatible)
